# dopcast

./: .gitignore  .windsurfrules  Dockerfile  README.md  cli.py  config.py  docker-compose.yml  hello.py  initialize.py  main.py  pyproject.toml  requirements.txt  run_real_workflow.py  run_workflow.py  test_audio_production.py  test_elevenlabs.py  test_enhanced_research_script.py  test_enhanced_script_with_research.py  test_full_audio_production.py  test_voice_synthesis.py
agents/: audio_production_agent.py  base_agent.py  content_planning_agent.py  coordination_agent.py  research_agent.py  script_generation_agent.py  voice_synthesis_agent.py
agents/audio_production/: README.md  __init__.py  enhanced_audio_production_agent.py
agents/common/: __init__.py  llm_client.py
agents/content_planning/: README.md  __init__.py  enhanced_content_planning_agent.py
agents/research/: README.md  __init__.py  enhanced_research_agent.py
agents/script_generation/: README.md  __init__.py  enhanced_script_generation_agent.py
agents/voice_synthesis/: README.md  __init__.py  enhanced_voice_synthesis_agent.py
api/: __init__.py  main.py
config/: storage.json  voice_profiles.json
config/backups/: config_20250318_190454.py
config/sports/: f1.json  motogp.json
docs/: agent_architecture.md  fact_checking_implementation.md  langgraph_implementation.md  system_architecture.md  windsurfideas.md
pipeline/: __init__.py  graph.py  workflow.py
scripts/: create_tables.sql  initialize_supabase.py  supabase_migration.sql
tests/: __init__.py  run_script_generation_tests.py  test_agents.py  test_enhanced_audio_production_agent.py  test_enhanced_content_planning_agent.py  test_enhanced_research_agent.py  test_enhanced_script_generation_agent.py  test_enhanced_voice_synthesis_agent.py  test_gemini_dialogue_generator.py  test_llm_script_generation.py  test_openai_transcript.py  test_transcript_simple.py  test_workflow.py  test_youtube_transcript.py  test_youtube_transcript_tool.py
utils/: __init__.py  audio_processor.py  redis_client.py  supabase_client.py
web/: __init__.py  app.py
(+69 files in other folders)
