[project]
name = "dopcast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.11",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.34.0",
    "openai==1.70.0",
    "langchain==0.3.22",
    "transformers==4.49.0",
    "torch>=2.3.0", # Updated to latest version compatible with Python 3.13
    "pandas==2.2.3",
    "requests==2.31.0",
    "beautifulsoup4==4.12.2",
    "SpeechRecognition==3.10.0",
    "librosa==0.10.1",
    "streamlit==1.28.1",
    "fastapi-cors==0.0.6",
    "pytest==7.4.3",
    "pyttsx3>=2.90",
    "pydub>=0.25.1",
    "gtts>=2.5.4",
    "reportlab>=4.1.0", # Added for PDF script generation
    "markdown>=3.5.2", # Added for Markdown script generation
    "langgraph>=0.3.25",
    "fastf1>=3.5.3",
    "aiohttp>=3.11.16",
    "youtube-transcript-api>=1.0.3", # Added for YouTube transcript extraction
    "yt-dlp>=2025.3.31",
    "langchain-google-genai>=2.1.2",
    "langchain-community>=0.3.20",
    "elevenlabs>=1.56.0", # Added for ElevenLabs voice synthesis
    "ffmpeg>=1.4",
    "langchain-exa>=0.2.1",
    "firecrawl-py>=1.15.0",
]
